# bimbot

./: CMakeLists.txt  README.md  package.xml
env-hooks/: gazebo.dsv.in
launch/: spawn_robots.launch.py
models/builderbot/: builderbot.sdf  builderbot.urdf
models/builderbot/meshes/: base_link.scad  track.scad
models/inspectorbot/: inspectorbot.sdf  inspectorbot.urdf
models/inspectorbot/meshes/: base_link.scad  propeller.scad
worlds/: construction_site.sdf
